input: enter key, placeholder letter spacing; fix input

--- a/src/app/components/expression-input/expression-input.component.scss
+++ b/src/app/components/expression-input/expression-input.component.scss
@@ -13,6 +13,10 @@ input[type=text] {
   letter-spacing: .15rem;
 }
 
+input[type=text].no-letter-spacing {
+  letter-spacing: initial;
+}
+
 .btn {
   height: 100%;
 }
